--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
 
     <application
         android:allowBackup="true"
+        android:name=".InApplication"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
         <activity
