--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
+            android:launchMode="singleTask"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.NoTitleBar" >
             <intent-filter>
@@ -35,6 +36,7 @@
             </intent-filter>
         </activity>
         <activity
+            android:launchMode="singleTask"
             android:name=".UserInfoActivity"
             android:label="@string/title_activity_user_info" >
         </activity>
